changed some apis
